# TrenchCoats

./: CMakeLists.txt  README.md  administrator.csv  administrator.html  auxiliary.csv  user.csv  user.html
Business/: AdministratorController.cpp  AdministratorController.h  UserController.cpp  UserController.h  Validator.cpp  Validator.h
Database/: TrenchCoat.cpp  TrenchCoat.h
DynamicVectorDir/: dynamicVector.h
Persistence/: AdminFileRepository.cpp  AdminFileRepository.h  AdminHTMLRepository.cpp  AdminHTMLRepository.h  AdminRepository.cpp  AdminRepository.h  MyException.h  UserFileRepository.cpp  UserFileRepository.h  UserHTMLRepository.cpp  UserHTMLRepository.h  UserRepository.cpp  UserRepository.h
Presentation/: AdminGUI.cpp  AdminGUI.h  GUI.cpp  GUI.h  UserGUI.cpp  UserGUI.h
Starting/: appStart.cpp
Testing/: tests.cpp  tests.h
